# bma-cli-python

./: pyproject.toml
src/: bma_cli.py
